--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         padding: 0;
       }
     </style>
-    <title>Vite + React</title>
+    <title>Hafizh Hugo Harman</title>
   </head>
   <body>
     <div id="root"></div>
